Kwc/Advanced/YoutubeWithPreviewImage/Component.scss
.kwcClass {
    position: relative;

    .kwcBem__image {
        position: relative;
        cursor: pointer;
        z-index: 2;
    }

    .kwcBem__playButton {
        position: absolute;
        text-align: center;
        width: 100%;
        top: 50%;
    }

    .kwcBem__youtubeContainer {
        position: absolute;
        width: auto;
        z-index: 3;
    }

    .kwcBem__youtubePlayer {
        display: none;
    }

    &.kwcBem--ratio16x9 {
        .kwcBem__youtubeContainer {
            padding-bottom: 56.27%;
            height: 0;

            iframe {
                position: absolute;
                height: 100%;
                width: 100%;
            }
        }
    }
    &.kwcBem--ratio4x3 {
        .kwcBem__youtubeContainer {
            padding-bottom: 75%;
            height: 0;

            iframe {
                position: absolute;
                height: 100%;
                width: 100%;
            }
        }
    }
}

